fix: :bug: 修复暗黑模式下.block__logo的颜色问题

--- a/plugin/bullet/main.scss
+++ b/plugin/bullet/main.scss
@@ -79,7 +79,7 @@ $height: $action-h + 4px;
     }
     // 列表子块的前一个块辅助线去掉毛边
     &:has(+ .list)::after {
-      height: auto !important;
+      height: auto;
       bottom: 0;
     }
     // 焦点列表块
