--- a/style/panel/sy-backlink.scss
+++ b/style/panel/sy-backlink.scss
@@ -4,7 +4,7 @@
 @use "../layout/status";
 @use "../protyle/gutters";
 
-$per: 0.9;
+$per: 0.85;
 
 .sy__backlink {
   .b3-list {
@@ -13,11 +13,6 @@ $per: 0.9;
   }
 
   [data-treetype="backlink"].b3-list-item {
-    // @include list-root();
-    // + div {
-    //   box-shadow: 10px 0 rgba(var(--page-1), 1) inset,
-    //     11px 0 rgba(var(--border-3), 1) inset;
-    // }
     &:not(:first-child) {
       margin-top: $interval !important;
     }
@@ -53,12 +48,12 @@ $per: 0.9;
     }
 
     &-gutters {
-
       button {
         @include svg-div(
           gutters.$w * $per,
           gutters.$svg-w * $per,
-          gutters.$h * $per
+          gutters.$h * $per,
+          $important: true
         );
         margin-right: gutters.$mar * $per;
         &[data-type="fold"] {
@@ -70,6 +65,33 @@ $per: 0.9;
           );
           margin-right: gutters.$mar * $per;
         }
+      }
+    }
+
+    &-attr {
+      font-size: 12px * $per !important;
+      &--bookmark,
+      &--name,
+      &--alias,
+      &--memo {
+        @include v-center(20px * $per, true);
+        > svg {
+          @include svg(10px * $per, $important: true);
+          margin: math.div(20px - 10px, 2) * $per math.div(20px - 10px, 2) *
+            $per 0 !important;
+        }
+      }
+      &--name,
+      &--alias {
+        padding: 0px 8px * $per 0 3px * $per;
+      }
+
+      &--bookmark {
+        padding: 0px 8px * $per;
+      }
+
+      &--memo {
+        padding: 0px 4px * $per;
       }
     }
   }
