fix: :bug: 修改边栏样式，使得可拖拽窗口

--- a/plugin/bullet/main.scss
+++ b/plugin/bullet/main.scss
@@ -90,6 +90,7 @@ $height: $action-h + 4px;
     }
   }
 
+  &[fold="1"] > [data-node-id]::after,
   &:has(> .rc-focus) > [data-node-id]::after {
     border-color: transparent;
   }
