fix: :bug: 优化字体菜单按钮样式

--- a/plugin/bullet/main.scss
+++ b/plugin/bullet/main.scss
@@ -13,6 +13,7 @@ $height: $action-h + 4px;
   content: "";
   display: block;
   position: absolute;
+  pointer-events: none;
   width: $width;
   left: $left;
   top: $top;
