fix: :bug: 修复关闭按钮失效的问题
link #85

--- a/plugin/tabBar/main.scss
+++ b/plugin/tabBar/main.scss
@@ -288,7 +288,8 @@ $item-radius: get($radius, $item-type);
 
 //  dock
 .dock--vertical {
-  padding-top: $top-h - $interval;
+  margin-top: $top-h - $interval;
+  height: calc(100vh - $top-h + $interval);
 }
 
 // empty
