fix: :bug: 增加Alt+B反链面板底部内边距
link #90

--- a/plugin/status/main.scss
+++ b/plugin/status/main.scss
@@ -151,16 +151,6 @@ $msg-icon-w: 14px;
   margin-bottom: $interval !important;
 }
 
-// wnd
-// #layouts > .fn__flex {
-//   > .fn__flex-column:not(.layout__center) {
-//     > .fn__flex {
-//       &:has(+ .layout__resize.fn__none),
-//       &:last-child {
-//         > [data-type="wnd"] {
-//           padding-bottom: 0 !important;
-//         }
-//       }
-//     }
-//   }
-// }
+.layout__center .sy__backlink{
+    padding-bottom: 40px;
+}
