--- a/style/protyle/block/heading.scss
+++ b/style/protyle/block/heading.scss
@@ -2,7 +2,7 @@
 @use "../../common" as *;
 @use "../gutters";
 
-$left: -18px - gutters.$mar - 3px;
+$left: -18px - gutters.$mar - 2px;
 
 @mixin heading($lv) {
   @if $lv == 5 or $lv ==6 {
@@ -16,20 +16,38 @@ $left: -18px - gutters.$mar - 3px;
   margin-bottom: math.div($lh, 2);
 }
 
-.b3-typography,
-.protyle-wysiwyg {
-  @for $i from 1 through 6 {
-    h#{$i},
-    .h#{$i} {
+@mixin top($lv) {
+  @if $lv == 5 or $lv ==6 {
+    $lv: 4;
+  }
+  $fz: 32px - $lv * 4px;
+  $lh: $fz + 10px;
+  margin-top: math.div($lh, 2) !important;
+  margin-bottom: math.div($lh, 4);
+}
+
+@for $i from 1 through 6 {
+  h#{$i},
+  .h#{$i} {
+    .b3-typography &,
+    .protyle-wysiwyg & {
       white-space: pre-wrap;
       word-break: break-word;
       padding: 0 2px;
       @include heading($i);
     }
+    .protyle-wysiwyg [data-node-id].li > .protyle-action ~ & {
+      @include top($i);
+    }
   }
 }
 
 .protyle-wysiwyg div[fold="1"][data-type="NodeHeading"]:before {
-  // top: 15px;
   left: $left !important;
+}
+
+.protyle-wysiwyg [data-node-id].li > [data-type="NodeHeading"] {
+  &[fold="1"]::before {
+    display: none;
+  }
 }
