--- a/plugin/tabBar/main.scss
+++ b/plugin/tabBar/main.scss
@@ -288,8 +288,7 @@ $item-radius: get($radius, $item-type);
 
 //  dock
 .dock--vertical {
-  margin-top: $top-h - $interval;
-  height: calc(100vh - $top-h + $interval);
+  padding-top: $top-h - $interval;
 }
 
 // empty
