fix: :bug: 修复输入框样式无法查看的问题

--- a/style/component/form.scss
+++ b/style/component/form.scss
@@ -8,7 +8,7 @@ $svg-width: get($icon, "small");
     // 搜索图标
     &-icon {
       @include svg($h, $svg-w);
-      left: 0;
+      left: 0 !important;
       top: 0;
     }
 
