fix: :bug: 修复关系图全屏下的样式问题

--- a/style/layout/wnd.scss
+++ b/style/layout/wnd.scss
@@ -76,6 +76,10 @@ $scale: scale(0.01);
         display: flex !important;
         animation: close $time forwards $func;
       }
+      
+      &:has(.fullscreen){
+        z-index: 2;
+      }
     }
   }
 }
