fix: :bug: 兼容新版顶栏

--- a/style/layout/top-bar.scss
+++ b/style/layout/top-bar.scss
@@ -1,4 +1,5 @@
 @use "sass:list";
+@use "sass:math";
 @use "../common" as *;
 @use "dock";
 
@@ -29,12 +30,10 @@ $list: (
 @mixin top-item {
   @include item("base", $important: true);
   @include component-base();
-  margin-right: $interval;
-
   &:not(#barWorkspace) {
     @include svg-div($item-w, $icon-w, $item-h);
+    margin-right: 3px;
   }
-  
   &--active {
     background-color: get($bg, "base", 2) !important;
   }
@@ -74,6 +73,18 @@ $list: (
     padding: 0;
   }
 
+  &::before {
+    $icon-w: get($icon, "large");
+    content: "";
+    display: flex;
+    display: block;
+    width: $icon-w;
+    height: $icon-w;
+    margin: auto math.div(dock.$dock-w - $icon-w, 2);
+    background-image: url("#{$asset-path}/icons/siyuan.svg");
+    background-repeat: round;
+  }
+
   .toolbar__item {
     -webkit-app-region: no-drag;
     @include top-item();
@@ -82,77 +93,11 @@ $list: (
       &Back,
       &Forward {
         @include svg-div($item-w, $icon-w - 2px, $item-h);
-        margin-right: $interval;
+        margin-right: 3px;
       }
-    }
-    // @each $id in $list {
-    //   &#bar#{$id} {
-    //   }
-    // }
-  }
-
-  #toolbarVIP {
-    $width: dock.$dock-w;
-
-    &:empty {
-      width: $width;
-      height: $bar-h;
-      &::before {
-        content: "";
-        display: block;
-        width: $icon-w;
-        height: $icon-w;
-        margin: auto;
-        background-image: url("#{$asset-path}/icons/siyuan.svg");
-        background-repeat: round;
-      }
-    }
-
-    &:not(:empty) {
-      .toolbar__item {
-        &:first-child {
-          @include svg-div($width, $icon-w, $item-h, true);
-          -webkit-app-region: drag;
-        }
-
-        // 头衔
-        // &:nth-child(2) {
-        //   // @include top-item();
-        //   background-color: get($bg, "base", 2) !important;
-        //   margin: 0;
-        //   width: auto;
-        //   height: $item-h;
-        //   padding: 0 $padding;
-        //   border-radius: get($radius, "max");
-        //   margin-right: 8px;
-        //   display: inline-flex;
-        //   cursor: pointer;
-
-        //   svg {
-        //     @include svg(10px);
-        //     margin: auto 0;
-        //   }
-        //   &::after {
-        //     @include reset-style();
-        //     @include v-center($item-h);
-        //     @include center();
-        //     content: "";
-        //     width: auto;
-        //     font-size: 11px;
-        //     z-index: 0;
-        //     color: $item-color;
-        //   }
-
-        //   $types: "捐赠者", "支持者", "赞助者";
-        //   @each $type in $types {
-        //     &[aria-label*="#{$type}"] {
-        //       &::after {
-        //         content: $type;
-        //         margin-left: 6px;
-        //       }
-        //     }
-        //   }
-        // }
+      &Workspace {
+        padding: 7px 10px;
+        // margin-left: 3px;
       }
     }
   }
