fix: :bug: 增加顶栏监听

--- a/style/component/list.scss
+++ b/style/component/list.scss
@@ -131,7 +131,7 @@ $padding: math.div($item-h - $text-h, 2);
 
   // 列表按钮
   &__action {
-    @include svg-div($text-h, get($icon, "base"));
+    @include svg-div($text-h, get($icon, "small"));
     @include list-btn();
     margin-left: $interval;
   }
