fix: :bug: 优化模板选择弹窗样式

--- a/style/dialog/history.scss
+++ b/style/dialog/history.scss
@@ -73,7 +73,7 @@ $padding: 16px;
   }
   .history__text {
     .protyle-wysiwyg {
-      padding-top: 16px !important;
+      padding-top: 16px;
     }
   }
 }
