--- a/style/protyle/bread-crumb.scss
+++ b/style/protyle/bread-crumb.scss
@@ -81,5 +81,8 @@ $fz: get($font-size, "exsmall");
     &::after {
       display: none;
     }
+    &[data-type="exit-focus"]{
+      width: auto;
+    }
   }
 }
